--- a/PixelSort/app/src/main/AndroidManifest.xml
+++ b/PixelSort/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
@@ -14,12 +16,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PixelSort"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
         <activity
             android:name=".Profile"
             android:exported="false" />
         <activity
-            android:name=".Home"
+            android:name=".Photos"
             android:exported="false" />
         <activity
             android:name=".Register"
