Add browse photos and users database

--- a/PixelSort/app/build.gradle
+++ b/PixelSort/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
