--- a/PixelSort/app/src/main/AndroidManifest.xml
+++ b/PixelSort/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.PixelSort"
         tools:targetApi="31">
         <activity
+            android:name=".addPhotos"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Albums"
             android:exported="false">
             <meta-data
