--- a/PixelSort/app/src/main/AndroidManifest.xml
+++ b/PixelSort/app/src/main/AndroidManifest.xml
@@ -24,14 +24,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Albums"
+            android:name=".AlbumsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Search"
+            android:name=".SearchActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -45,16 +45,16 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Profile"
+            android:name=".ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Photos"
+            android:name=".PhotosActivity"
             android:exported="false" />
         <activity
-            android:name=".Register"
+            android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
