--- a/PixelSort/app/build.gradle
+++ b/PixelSort/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.mlkit:vision-common:17.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     // Image classification
