--- a/PixelSort/app/src/main/AndroidManifest.xml
+++ b/PixelSort/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         </activity>
         <activity
             android:name=".SearchActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
