--- a/PixelSort/app/build.gradle
+++ b/PixelSort/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     // Image classification
     implementation 'com.google.mlkit:image-labeling:17.0.7'
 
+    implementation "androidx.exifinterface:exifinterface:1.3.6"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
