--- a/PixelSort/build.gradle
+++ b/PixelSort/build.gradle
@@ -7,7 +7,11 @@ buildscript {
     }
     dependencies {
         // Add the dependency for the Google services Gradle plugin
-        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.gms:google-services:4.3.15'
+
+        // Add the dependency for the Performance Monitoring Gradle plugin
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
 
     }
 }
